typescript/checker/tests/conformance/es6/templates/templateStringInMultiplicationES6.ts.stderr
error: TS2363 {
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            43,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringInMultiplicationES6.ts:2:13
  |
2 | var x = 1 * `abc${ 1 }def`;
  |             ^^^^^^^^^^^^^^

